# InboxSweep

./: .coverage  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.codeassistant/: mcp.json
config/settings/: base.py  development.py  production.py
core/: mixins.py
docs/: ai_agents.md  cbv_django_move.md  cbv_implementation_next_steps.md  email_fetching_implementation_plan.md  enhanced_project_overview.md  enhanced_requirements.md  enhanced_setup_guide.md  tasks_DONE_dont_check.md  technical_specification.md
emails/: admin.py  forms.py  models.py  tests.py  tests_comprehensive.py  urls.py  views.py
emails/migrations/: 0001_initial.py
inboxsweep/: asgi.py  settings.py  urls.py  wsgi.py
oauth/: admin.py  apps.py  models.py  services.py  signals.py  tests.py  tests_comprehensive.py  urls.py  views.py
oauth/migrations/: 0001_initial.py  0002_remove_oauthconnection_unique_user_provider_and_more.py
sync/: admin.py  apps.py  models.py  services.py  tests.py  tests_comprehensive.py  urls.py  views.py
sync/migrations/: 0001_initial.py
templates/: base.html
templates/emails/: dashboard.html  home.html  profile.html
templates/oauth/: base.html  connect.html  connections.html
templates/registration/: login.html
templates/sync/: base.html  dashboard.html  email_detail.html  email_list.html  history.html
tests/: conftest.py  test_user_auth.py
